Code cleanup Add camera trajectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,8 @@ Set(SRC
         Editor/MapViewer.cpp
         Editor/Global.h
         Editor/Utils.hpp
+        Editor/SlamTask.h
+        Editor/SlamTask.cpp
 )
 
 add_executable(Orbital ${SRC})
