--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # path to dependencies
 set(CMAKE_TOOLCHAIN_FILE ./ThirdParty/vcpkg-2020.06/scripts/buildsystems/vcpkg.cmake)
-set(openvslam_DIR ./ThirdParty/openvslam/lib/cmake/openvslam)
-set(g2o_DIR ./ThirdParty/g2o/lib/cmake/g2o)
+#set(openvslam_DIR ./ThirdParty/openvslam/lib/cmake/openvslam)
+#set(g2o_DIR ./ThirdParty/g2o_install/lib/cmake/g2o)
 set(OpenCV_DIR ./ThirdParty/opencv/share/OpenCV)
 set(assimp_DIR ./ThirdParty/assimp/lib/cmake/assimp-5.0)
 
@@ -15,7 +15,7 @@ project(Orbital)
 
 # Required for openvslam
 find_package(suitesparse CONFIG REQUIRED)
-find_package(openvslam REQUIRED)
+#find_package(openvslam REQUIRED)
 
 # Window and OpenGL
 find_package(GLEW REQUIRED)
@@ -26,9 +26,11 @@ find_package(unofficial-nativefiledialog CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(assimp CONFIG REQUIRED)
 
+#Add OpenVSLAM as source
+add_subdirectory(ThirdParty)
+
 Set(IMGUI_VERSION "imgui-1.77")
 Set(IMGUI_SRC
-
     ThirdParty/${IMGUI_VERSION}/imgui.h
     ThirdParty/${IMGUI_VERSION}/imgui.cpp
     ThirdParty/${IMGUI_VERSION}/imgui_internal.h
@@ -47,7 +49,6 @@ Set(IMGUI_SRC
 
     ThirdParty/${IMGUI_VERSION}/examples/imgui_impl_opengl3.h
     ThirdParty/${IMGUI_VERSION}/examples/imgui_impl_opengl3.cpp
-
 )
 
 add_library(ImGui ${IMGUI_SRC})
@@ -62,8 +63,8 @@ Set(ENGINE_SRC
         Engine/Shader.cpp
         Engine/Mesh.h
         Engine/Mesh.cpp
-        Engine/MeshExporter.h
-        Engine/MeshExporter.cpp
+        Engine/MeshImporter.h
+        Engine/MeshImporter.cpp
         Engine/SceneRenderer.h
         Engine/SceneRenderer.cpp
         Engine/Camera.h
@@ -83,21 +84,28 @@ target_link_libraries(Engine PRIVATE ${OpenCV_LIBS} GLEW::GLEW glm assimp::assim
 
 
 Set(SRC
+        # Core
 	Editor/Main.cpp
         Editor/Core.h
         Editor/Core.cpp
-        Editor/VideoPreview.h
-        Editor/VideoPreview.cpp
-        Editor/MapViewer.h
-        Editor/MapViewer.cpp
         Editor/Global.h
         Editor/Utils.hpp
+
+        # Tasks
         Editor/SlamTask.h
         Editor/SlamTask.cpp
+
+        # Editors
+        Editor/VideoPreview.h
+        Editor/VideoPreview.cpp
+        Editor/Outliner.h
+        Editor/Outliner.cpp
+        Editor/MapViewer.h
+        Editor/MapViewer.cpp
 )
 
 add_executable(Orbital ${SRC})
-target_link_libraries(Orbital PRIVATE Engine ImGui ${OpenCV_LIBS} openvslam::openvslam unofficial::nativefiledialog::nfd)
+target_link_libraries(Orbital PRIVATE Engine ImGui ${OpenCV_LIBS} openvslam unofficial::nativefiledialog::nfd)
 
 # Copy shaders
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
