Add Property editor
Initial rotation, scaling, translation support
Updated todos

--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -19,6 +19,8 @@ Set(SRC
         VideoPreview.cpp
         Outliner.h
         Outliner.cpp
+	PropertyEditor.h
+        PropertyEditor.cpp
         MapViewer.h
         MapViewer.cpp
 )
