Camera and Mesh are now entities (IEntity)
WIP Video background (still has bugs)
virtual Camera is rotated 180 degrees

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -29,6 +29,7 @@ target_include_directories(ImGui PUBLIC ${CMAKE_SOURCE_DIR}/ThirdParty/${IMGUI_V
 target_link_libraries(ImGui PRIVATE glfw GLEW::GLEW)
 
 Set(ENGINE_SRC
+        IEntity.h
         Texture.h
         Texture.cpp
         Shader.h
