--- a/Shaders/Shaders.vcxproj
+++ b/Shaders/Shaders.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d307ea5f-ffb0-4898-b18e-756fd53642db}</ProjectGuid>
-    <RootNamespace>Editor</RootNamespace>
+    <ProjectGuid>{8c99e6fe-04af-4fd9-96f4-eb260d4a0e0d}</ProjectGuid>
+    <RootNamespace>Shaders</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -78,17 +78,10 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\ThirdParty\imgui-node-editor;..\ThirdParty\ImGuizmo;..;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\Shaders</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\ThirdParty\imgui-node-editor;..\ThirdParty\ImGuizmo;..;$(IncludePath)</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <VcpkgUseStatic>true</VcpkgUseStatic>
-  </PropertyGroup>
-  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <VcpkgUseStatic>true</VcpkgUseStatic>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -122,15 +115,12 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp14</LanguageStandard>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Ws2_32.Lib;Crypt32.Lib;Wldap32.Lib;Secur32.lib;Bcrypt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,93 +129,32 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Ws2_32.Lib;Crypt32.Lib;Wldap32.Lib;Secur32.lib;Bcrypt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Core.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Nodes\FileNode.cpp" />
-    <ClCompile Include="Nodes\MapViewNode.cpp" />
-    <ClCompile Include="Nodes\SlamNode.cpp" />
-    <ClCompile Include="Nodes\VideoPrevNode.cpp" />
-    <ClCompile Include="Tasks\MeshImportTask.cpp" />
-    <ClCompile Include="Tasks\OpenVslamTask.cpp" />
-    <ClCompile Include="Tasks\TaskWorker.cpp" />
-    <ClCompile Include="Tasks\Viso2Task.cpp" />
-    <ClCompile Include="Views\MapViewer.cpp" />
-    <ClCompile Include="Views\NodeEditor.cpp" />
-    <ClCompile Include="Views\Outliner.cpp" />
-    <ClCompile Include="Views\PropertyEditor.cpp" />
-    <ClCompile Include="Views\Sequencer.cpp" />
-    <ClCompile Include="Views\TaskPanel.cpp" />
-    <ClCompile Include="Views\Toolbar.cpp" />
-    <ClCompile Include="Views\VideoPreview.cpp" />
-    <ClCompile Include="Window.cpp" />
-    <ClCompile Include="_Triangulation\AKAZE.cpp" />
-    <ClCompile Include="_Triangulation\Image.cpp" />
-    <ClCompile Include="_Triangulation\Triangulation.cpp" />
+    <ClCompile Include="Shaders.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Base\Percentage.hpp" />
-    <ClInclude Include="Base\ScopeMutexLock.hpp" />
-    <ClInclude Include="Core.h" />
-    <ClInclude Include="Global.h" />
-    <ClInclude Include="Nodes\FileNode.h" />
-    <ClInclude Include="Nodes\INode.h" />
-    <ClInclude Include="Nodes\MapViewNode.h" />
-    <ClInclude Include="Nodes\SlamNode.h" />
-    <ClInclude Include="Nodes\VideoPrevNode.h" />
-    <ClInclude Include="Tasks\MeshImportTask.h" />
-    <ClInclude Include="Tasks\OpenVslamTask.h" />
-    <ClInclude Include="Tasks\TaskWorker.h" />
-    <ClInclude Include="Tasks\Viso2Task.h" />
-    <ClInclude Include="Utils.hpp" />
-    <ClInclude Include="Views\IView.hpp" />
-    <ClInclude Include="Views\MapViewer.h" />
-    <ClInclude Include="Views\NodeEditor.h" />
-    <ClInclude Include="Views\Outliner.h" />
-    <ClInclude Include="Views\PropertyEditor.h" />
-    <ClInclude Include="Views\Sequencer.h" />
-    <ClInclude Include="Views\TaskPanel.h" />
-    <ClInclude Include="Views\Toolbar.h" />
-    <ClInclude Include="Views\VideoPreview.h" />
-    <ClInclude Include="Window.h" />
-    <ClInclude Include="_Triangulation\AKAZE.h" />
-    <ClInclude Include="_Triangulation\Image.h" />
-    <ClInclude Include="_Triangulation\Triangulation.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Engine\Engine.vcxproj">
-      <Project>{fe6fefa0-e75e-470c-bdfb-0a8d432a06d1}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Shaders\Shaders.vcxproj">
-      <Project>{8c99e6fe-04af-4fd9-96f4-eb260d4a0e0d}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\FBoW.vcxproj">
-      <Project>{e2e39350-4f7b-4eb8-82ca-caffc4d2d4be}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\ImGui.vcxproj">
-      <Project>{9bedac37-b062-40fb-aa21-257bd86d0076}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\ImGuizmo.vcxproj">
-      <Project>{a2c1fbbe-7fe7-4274-987a-b90d7f13e4cc}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\NodeEd.vcxproj">
-      <Project>{3c4ffedc-2839-4246-b376-32f616da37d2}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\OpenVSLAM.vcxproj">
-      <Project>{1038eaa9-012a-4735-a256-2c933243a6e9}</Project>
-    </ProjectReference>
+    <None Include="MapViewer.fs">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="MapViewer.vs">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="Mesh.fs">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="Mesh.vs">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
