--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -4,8 +4,8 @@ Size=400,392
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1901,19
-Size=576,637
+Pos=707,150
+Size=634,360
 Collapsed=0
 
 [Window][Video preview]
@@ -81,6 +81,21 @@ Collapsed=0
 [Window][Example: Long text display]
 Pos=60,60
 Size=520,600
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=101,200
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
